--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "^14.2.0",
     "@fortawesome/fontawesome-free": "^6.2.0",
     "bootstrap": "^5.2.2",
+    "bson": "^4.7.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
