--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@fortawesome/fontawesome-free": "^6.2.0",
     "bootstrap": "^5.2.2",
     "bson": "^4.7.0",
+    "netlify-cli": "^14.3.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
