--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,23 +2,25 @@ version: 2.1
 jobs:
   deploy:
     docker:
-      - image: google/cloud-sdk
-    resource_class: small
+      - image: cimg/node:16.17.0
 
-    # See: https://circleci.com/docs/2.0/configuration-reference/#steps
     steps:
-      # Checkout the code as the first step.
       - checkout
 
       - run:
-          name: Install Node.js
+          name: Update NPM
           command: |
-            curl -fsSL https://deb.nodesource.com/setup_16.x | bash - &&\
-            apt-get install -y nodejs
+            sudo npm install -g npm
+      - restore_cache:
+          key: dependency-cache-{{ checksum "package-lock.json" }}
       - run:
           name: Install Dependencies
           command: |
             npm install
+      - save_cache:
+          key: dependency-cache-{{ checksum "package-lock.json" }}
+          paths:
+            - ./node_modules
       - run:
           name: Build Angular app
           command: |
@@ -27,22 +29,17 @@ jobs:
           name: Removes the devDependencies
           command: |
             npm prune --production
-      # Make sure you enabled on GCP: Cloud Build API, Cloud Resource Manager API, and App Engine Admin API.
+      - save_cache:
+          key: app-build-cache-{{ .Branch }}
+          paths:
+            - ./dist
       - run:
-          name: Setup Google Cloud CLI
+          name: Deploy to Netlify
           command: |
-            echo $GCLOUD_SERVICE_KEY | gcloud auth activate-service-account --key-file=-
-            gcloud --quiet config set project blprs-tournament-fe
-            gcloud --quiet config set compute/zone northamerica-northeast1
-      - run:
-          name: Deploy the app
-          command: |          
-            gcloud app deploy
-# Invoke jobs via workflows
-# See: https://circleci.com/docs/2.0/configuration-reference/#workflows
+            ./node_modules/.bin/netlify deploy --site $NETLIFY_SITE_ID --auth $NETLIFY_ACCESS_TOKEN --prod --dir=dist
 workflows:
-  setup_deploy: # This is the name of the workflow, feel free to change it to better match your workflow.
-    # Inside the workflow, you define the jobs you want to run.
+  version: 2
+  setup_deploy:
     jobs:
       - deploy:
           filters:
